<resources>
    <string name="app_name">Quiz about Poland</string>
    <string name="type_name">Type Your Name</string>
    <string name="capital">The capital of Poland is....</string>
    <string name="cracow">Cracow</string>
    <string name="warsaw">Warsaw</string>
    <string name="wroclaw">Wroclaw</string>
    <string name="border">Which country borders Poland?</string>
    <string name="germany">Germany</string>
    <string name="lithuania">Lithuania</string>
    <string name="hungary">Hungary</string>
    <string name="russia">Russia</string>
    <string name="history">...and with which of these countries has Poland never bordered during its history?</string>
    <string name="turkey">Turkey</string>
    <string name="sweden">Sweden</string>
    <string name="romania">Romania</string>
    <string name="serbia">Serbia</string>
    <string name="area">Which place take Poland in Europe in terms of area of the country?</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="_15">15</string>
    <string name="uprising">Warsaw Uprising began in...</string>
    <string name="_1939">1939</string>
    <string name="_1943">1943</string>
    <string name="_1944">1944</string>
    <string name="poland">In Poland we can find...</string>
    <string name="desert">desert</string>
    <string name="sea">sea</string>
    <string name="mountains">mountains</string>
    <string name="lakes">lakes</string>
    <string name="constitution">Constitution of Poland was second on the world?</string>
    <string name="yes">True</string>
    <string name="no">False</string>
    <string name="football">Which polish football team draw in match with Real Madryt during Champion League 2016/2017?</string>
    <string name="wisla">Wisla Cracow</string>
    <string name="arka">Arka Gdynia</string>
    <string name="legia">Legia Warsaw</string>
    <string name="submit">Submit</string>
    <string name="answer">Put the answer</string>
</resources>
