<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/view" />


        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_0"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/EditText_marginLeft"
                android:layout_marginTop="@dimen/EditText_marginTop"
                android:gravity="center_horizontal"
                android:hint="@string/type_name"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                android:textSize="@dimen/editText_textSize"/>
        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_1"/>

            <TextView
                style="@style/questions"
                android:text="@string/capital" />

            <RadioGroup
                android:id="@+id/q1_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q1a1"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q1a1_marginTop"
                    android:text="@string/cracow" />

                <RadioButton
                    android:id="@+id/q1a2"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q1a2_marginTop"
                    android:text="@string/warsaw" />

                <RadioButton
                    android:id="@+id/q1a3"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q1a3_marginTop"
                    android:text="@string/wroclaw" />

            </RadioGroup>

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_2"/>

            <TextView
                style="@style/questions"
                android:text="@string/border" />

            <CheckBox
                android:id="@+id/q2a1"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q2a1__marginTop"
                android:text="@string/germany" />

            <CheckBox
                android:id="@+id/q2a2"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q2a2_marginTop"
                android:text="@string/lithuania" />

            <CheckBox
                android:id="@+id/q2a3"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q2a3_marginTop"
                android:text="@string/hungary" />

            <CheckBox
                android:id="@+id/q2a4"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q2a4_marginTop"
                android:text="@string/russia" />

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_3"/>

            <TextView
                style="@style/questions"
                android:text="@string/history" />

            <RadioGroup
                android:id="@+id/q3_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q3a1"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q3a1_marginTop"
                    android:text="@string/turkey" />

                <RadioButton
                    android:id="@+id/q3a2"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q3a2_marginTop"
                    android:text="@string/sweden" />

                <RadioButton
                    android:id="@+id/q3a3"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q3a3_marginTop"
                    android:text="@string/romania" />

                <RadioButton
                    android:id="@+id/q3a4"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q3a4_marginTop"
                    android:text="@string/serbia" />

            </RadioGroup>

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_4"/>

            <TextView
                style="@style/questions"
                android:text="@string/area" />

            <RadioGroup
                android:id="@+id/q4_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q4a1"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q4a1_marginTop"
                    android:text="@string/_1" />

                <RadioButton
                    android:id="@+id/q4a2"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q4a2_marginTop"
                    android:text="@string/_9" />

                <RadioButton
                    android:id="@+id/q4a3"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q4a3_marginTop"
                    android:text="@string/_15" />

            </RadioGroup>

        </RelativeLayout>


        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_5"/>

            <TextView
                style="@style/questions"
                android:text="@string/uprising" />

            <RadioGroup
                android:id="@+id/q5_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q5a1"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q5a1_marginTop"
                    android:text="@string/_1939" />

                <RadioButton
                    android:id="@+id/q5a2"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q5a2_marginTop"
                    android:text="@string/_1943" />

                <RadioButton
                    android:id="@+id/q5a3"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q5a3_marginTop"
                    android:text="@string/_1944" />

            </RadioGroup>

        </RelativeLayout>


        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_6"/>

            <TextView
                style="@style/questions"
                android:text="@string/poland" />

            <CheckBox
                android:id="@+id/q6a1"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q6a1_marginTop"
                android:text="@string/desert" />

            <CheckBox
                android:id="@+id/q6a2"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q6a2_marginTop"
                android:text="@string/sea" />

            <CheckBox
                android:id="@+id/q6a3"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q6a3_marginTop"
                android:text="@string/mountains" />

            <CheckBox
                android:id="@+id/q6a4"
                style="@style/checkbox"
                android:layout_marginTop="@dimen/q6a4_marginTop"
                android:text="@string/lakes" />

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_7"/>

            <TextView
                style="@style/questions"
                android:text="@string/constitution" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="@dimen/EditText_marginTop"
                android:gravity="center_horizontal"
                android:hint="@string/answer"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                android:textSize="@dimen/editText_textSize"
                android:id="@+id/answer"
                />


        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout
            style="@style/frame">

            <ImageView
                style="@style/image"
                android:src="@drawable/bg_8"/>

            <TextView
                style="@style/questions"
                android:text="@string/football" />

            <RadioGroup
                android:id="@+id/q8_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q8a1"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q8a1_marginTop"
                    android:text="@string/wisla" />

                <RadioButton
                    android:id="@+id/q8a2"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q8a2_marginTop"
                    android:text="@string/arka" />

                <RadioButton
                    android:id="@+id/q8a3"
                    style="@style/radio"
                    android:layout_marginTop="@dimen/q8a3_marginTop"
                    android:text="@string/legia" />

            </RadioGroup>

        </RelativeLayout>


        <View style="@style/view" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Relative_height"
            android:background="#ba2c2a">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/submit_marginLeft"
                android:layout_marginTop="@dimen/submit_marginTop"
                android:onClick="submit"
                android:text="@string/submit"
                android:textSize="@dimen/submit_textSize" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>